--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -42,8 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arrojado.cs" />
+    <Compile Include="CalculadorDeImposto.cs" />
+    <Compile Include="Conservador.cs" />
+    <Compile Include="Conta.cs" />
+    <Compile Include="ICCC.cs" />
+    <Compile Include="ICMS.cs" />
+    <Compile Include="ICSS.cs" />
+    <Compile Include="Imposto.cs" />
+    <Compile Include="Investimento.cs" />
+    <Compile Include="Moderado.cs" />
+    <Compile Include="Orcamento.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RealizadorDeInvestimento.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
