--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -43,19 +43,32 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arrojado.cs" />
+    <Compile Include="CalculadorDeDescontos.cs" />
     <Compile Include="CalculadorDeImposto.cs" />
     <Compile Include="Conservador.cs" />
     <Compile Include="Conta.cs" />
+    <Compile Include="CVS.cs" />
+    <Compile Include="DescontoQuantidadeItens.cs" />
+    <Compile Include="DescontoValorCompra.cs" />
+    <Compile Include="DescontoVendaCasada.cs" />
+    <Compile Include="Formato.cs" />
     <Compile Include="ICCC.cs" />
     <Compile Include="ICMS.cs" />
     <Compile Include="ICSS.cs" />
+    <Compile Include="IDesconto.cs" />
+    <Compile Include="IFormato.cs" />
     <Compile Include="Imposto.cs" />
     <Compile Include="Investimento.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Moderado.cs" />
     <Compile Include="Orcamento.cs" />
+    <Compile Include="PORCENTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RealizadorDeInvestimento.cs" />
+    <Compile Include="Requisicao.cs" />
+    <Compile Include="SemDesconto.cs" />
+    <Compile Include="XML.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
