--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -54,9 +54,12 @@
     <Compile Include="Formato.cs" />
     <Compile Include="ICCC.cs" />
     <Compile Include="ICMS.cs" />
+    <Compile Include="ICPP.cs" />
     <Compile Include="ICSS.cs" />
     <Compile Include="IDesconto.cs" />
     <Compile Include="IFormato.cs" />
+    <Compile Include="IHIT.cs" />
+    <Compile Include="IKCV.cs" />
     <Compile Include="Imposto.cs" />
     <Compile Include="Investimento.cs" />
     <Compile Include="Item.cs" />
@@ -68,6 +71,7 @@
     <Compile Include="RealizadorDeInvestimento.cs" />
     <Compile Include="Requisicao.cs" />
     <Compile Include="SemDesconto.cs" />
+    <Compile Include="TemplateMethodImposto.cs" />
     <Compile Include="XML.cs" />
   </ItemGroup>
   <ItemGroup>
