--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arrojado.cs" />
+    <Compile Include="Banco.cs" />
     <Compile Include="CalculadorDeDescontos.cs" />
     <Compile Include="CalculadorDeImposto.cs" />
     <Compile Include="Conservador.cs" />
@@ -69,6 +70,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RealizadorDeInvestimento.cs" />
+    <Compile Include="RelatorioComplexo.cs" />
+    <Compile Include="RelatorioSimples.cs" />
+    <Compile Include="RelatorioTemplate.cs" />
     <Compile Include="Requisicao.cs" />
     <Compile Include="SemDesconto.cs" />
     <Compile Include="TemplateMethodImposto.cs" />
