--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -62,7 +62,9 @@
     <Compile Include="IHIT.cs" />
     <Compile Include="IKCV.cs" />
     <Compile Include="Imposto.cs" />
+    <Compile Include="ImpostoImportacao.cs" />
     <Compile Include="Investimento.cs" />
+    <Compile Include="ISS.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Moderado.cs" />
     <Compile Include="Orcamento.cs" />
