--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -75,8 +75,10 @@
     <Compile Include="Investimento.cs" />
     <Compile Include="ISS.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="ItemDaNota.cs" />
     <Compile Include="Moderado.cs" />
     <Compile Include="Negativo.cs" />
+    <Compile Include="NotaFiscal.cs" />
     <Compile Include="Orcamento.cs" />
     <Compile Include="PORCENTO.cs" />
     <Compile Include="Positivo.cs" />
