--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -76,9 +76,11 @@
     <Compile Include="ISS.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemDaNota.cs" />
+    <Compile Include="ItemDaNotaBuilder.cs" />
     <Compile Include="Moderado.cs" />
     <Compile Include="Negativo.cs" />
     <Compile Include="NotaFiscal.cs" />
+    <Compile Include="NotaFiscalBuilder.cs" />
     <Compile Include="Orcamento.cs" />
     <Compile Include="PORCENTO.cs" />
     <Compile Include="Positivo.cs" />
